<resources>
    <string name="app_name">BawaBerkah</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_barzah">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim im</string>
    <string name="rincian">BOGOR -- Gelak tawa dan rasa geli mewarnai ruang kelas kecil, saat pelatihan pemulasaraan jenazah berlangsung, Kamis (27/7). Puluhan peserta yang mengikuti pelatihan dari Badan Pemulasaraan Jenazah (Barzah) Dompet Dhuafa, merupakan siswa-siswi SMP – SMK Ar-Rasyid, dan beberapa santri Yayasan Nurul Iman, Kampung Palias, Rumpin, Bogor.\n\nMenurut Abdul Qadir, selaku kepala sekolah Ar-Rasyid, pelatihan ini adalah pendidikan umum Agama Islam. Peranannya untuk memahami salah satu Fardu Kifayah yang sangat penting di tengah masyarakat.\n\n“Sejak dini para pelajar harus dapat memahami tata cara mengurus jenazah. Karena ilmu ini jarang sekali diajarkan di sekolah. Padahal masyarakat sangat membutuhkan,” ujarnya.\n\nSenada dengan Abdul Qodir, pemateri dalam kegiatan tersebut Ustadz Madroi, menuturkan bahwa ilmu yang bermanfaat itu lebih utama. “Para pelajar bukan hanya memiliki kemampuan berpikir. Tetapi harus diimbangi dengan seberapa besar dapat bermanfaat di tengah masyarakat,” tutur Ustadz Madroi, Koordinator Barzah Dompet Dhuafa.\n\nPara peserta sendiri selain terlihat antusias mempelajari tata cara pengurusan jenazah, tidak sedikit pula yang merasa takut. Bahkan untuk memegang kain kafan pun masih belum berani. Seperti yang dialami salah satu siswa yang mengikuti kegiatan tersebut. “Ih, saya tidak berani pegang, Pak,” ujarnya sambil menghindar saat disuguhkan kain berwarna putih untuk membungkus boneka (peraga mayat).\n\nDi akhir pelatihan, beberapa peserta bertanya terkait pengurusan jenazah yang selama ini dipraktikan di kampung halamannya agak sedikit berbeda dengan hasil pelatihan. Namun Ustadz Madroi menjawab itu merupakan tradisi atau budaya masyarakat, maka harus diselaraskan dengan syari’at.\n\n“Tidak sedikit di tengah masyarakat memahami pengurusan jenazah itu berdasarkan apa yang terlihat secara turun-temurun, atau telah menjadi budaya warisan. Jika itu tidak bertentangan dengan syari’at, tidak apa-apa dilakukan,” jawab Madroi.\n\nBadan Pemulasaraan Jenazah (Barzah) Dompet Dhuafa, selain memberikan pelatihan untuk amil, pelajar, dan masyarakat umum mengenai tata cara pemulasaran jenazah, juga memiliki program antar-jemput jenazah secara gratis untuk kaum dhuafa. Sejauh ini, Barzah sudah melayani lebih dari 3.000 jenazah. (Dompet Dhuafa/Rahmat)</string>
    <string name="detail_mobile_jenazah">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="syarat1">Untuk menggunakan Layanan kami, Anda harus mengikuti prosedur yang ditetapkan di Aplikasi.</string>
    <string name="syarat2">Rincian prosedur pembayaran dan bagaimana kami akan memproses donasi Anda ditampilkan di aplikasi kami.</string>
    <string name="syarat3">Anda dapat membayar donasi dengan transfer bank atau kartu kredit Anda.</string>
    <string name="syarat4">Kami berusaha memastikan bahwa informasi di situs kami tentang proyek, tujuan pendanaan, dan jumlah donasi terakhir yang diterima akurat. Namun, terkadang ada penundaan dalam memperbarui informasi ini, atau terjadi perubahan target pendanaan proyek sosial. Terkadang, sebuah proyek sosial yang sudah Anda donasikan mungkin akan tidak memenuhi persyaratan BawaBerkah sebelum pencairan dana. Jika ini terjadi, kami dapat menghubungi Anda untuk meminta preferensi Anda untuk proyek mana yang akan Anda alokasikan sebagai pengganti. Jika kami tidak dapat memperoleh informasi dari Anda tentang hal tersebut setelah beberapa waktu, kami berhak mendistribusikan sumbangan Anda ke proyek lain dengan pertimbangan mutlak kami.</string>
    <string name="syarat5">Kami berhak menolak untuk memproses sumbangan yang Anda berikan. Jika sumbangan Anda diterima, kami akan mengkonfirmasi penerimaan Anda dengan mengirimkan email ke alamat email yang Anda berikan saat mendaftar di situs kami. Donasi tersebut kemudian diproses pada tanggal yang tersebut dalam email konfirmasi.</string>
    <string name="syarat6">Anda memastikan bahwa semua rincian yang Anda berikan kepada kami untuk tujuan penggunaan layanan yang ditawarkan di situs kami adalah benar dan bahwa kartu kredit atau debit, atau uang elektronik apa pun yang Anda gunakan adalah milik Anda sendiri dan tersedia dana yang cukup untuk menutupi sumbangan yang Anda buat. Kami berhak untuk mendapatkan validasi rincian kartu kredit atau debit Anda atau verifikasi keaslian dan kepemilikan metode pembayaran sebelum melakukan langkah lain untuk memproses donasi Anda jika diperlukan.</string>
    <string name="syarat7">Setelah kami mengirimi Anda email yang mengonfirmasi donasi Anda, tidak mungkin sumbangan untuk dikembalikan.</string>
    <string name="syarat8">Anda memahami bahwa kami menolak keluhan atas biaya-biaya yang tidak kami cantumkan pada layanan dan syarat ketentuan kami serta biaya tambahan dari pihak ketiga sehubungan transaksi yang Anda lakukan pada website kami, jika ada, seperti biaya transfer antar bank.</string>
    <string name="syarat9">Kami tidak memberikan saran akuntansi, pajak atau keuangan dan Anda tidak boleh bergantung pada informasi yang diberikan di situs kami untuk menentukan konsekuensi akuntansi, pajak atau keuangan saat memberikan sumbangan dengan menggunakan Layanan kami.</string>
    <string name="kebijakan1">Kami mengumpulkan informasi dari Anda ketika Anda mendaftar pada situs kami, masuk ke akun Anda, melakukan donasi, ikut dalam kontes, dan/atau ketika Anda keluar. Data yang dikumpulkan mencakup nama Anda, alamat email, nomor telepon, dan/atau kartu kredit.Selain itu, kami menerima dan merekam informasi secara otomatis dari komputer dan peramban Anda, termasuk alamat IP Anda, perlengakapan perangkat keras dan lunak Anda, dan halaman yang Anda minta.</string>
    <string name="kebijakan2">Segala informasi yang kami kumpulkan dari Anda dapat digunakan untuk:</string>
    <string name="kebijakan21">- Personalisasi pengalaman dan tanggapan Anda sesuai kebutuhan pribadi Anda</string>
    <string name="kebijakan22">- Menyediakan konten iklan yang disesuaikan</string>
    <string name="kebijakan23">- Meningkatkan situs web kami</string>
    <string name="kebijakan24">- Meningkatkan layanan pelanggan dan mendukung kebutuhan Anda</string>
    <string name="kebijakan25">- Menghubungi Anda lewat email</string>
    <string name="kebijakan26">- Mengatur kontes, promo, atau survei</string>
    <string name="kebijakan3">Kami adalah pemilik tunggal dari informasi yang dikumpulkan pada situs ini. Informasi pribadi Anda yang dapat diidentifikasi tidak akan dijual, dipertukarkan, ditransfer, atau diberikan kepada perusahaan lain dengan alasan apa pun juga, tanpa mendapatkan izin Anda, selain dari hanya semata-mata untuk memenuhi permohonan dan/ atau transaksi, misalnya untuk pengiriman laporan proyek sosial.</string>
    <string name="tentangKami">BawaBerkah adalah kanal penggalangan dana public yang memudahkan lembaga sosial, komunitas maupun personal terverifikasi untuk menggalang dana zakat, sedekah dan wakaf secara online dengan lebih transparan serta terpercaya.</string>
    <string name="tentang1">Anda dapat ketahui perkembangan perolehan donasi, jumlah pendukung serta perkembangan terbaru atas program yang dilaksanakan Pemilik Campaign.</string>
    <string name="tentang2">Anda dapat berdonasi dengan tahapan yang singkat dan berbasis teknologi pembayaran online terbaru yang aman.</string>
    <string name="tentang3">Setiap campaign yang Anda dukung dikelola oleh yayasan, organisasi dan komunitas terpercaya yang telah diverifikasi oleh BawaBerkah.</string>
    <string name="tentang4">Anda dapat ketahui perkembangan perolehan donasi, jumlah pendukung serta perkembangBawaBerkah memonitor Pemilik Campaign dalam memastikan penggunaan donasi Anda sesuai peruntukan serta menghubungkan dengan Dompet Dhuafa untuk penguatan pelaksanaan program jika dibutuhkan.an terbaru atas program yang dilaksanakan Pemilik Campaign.</string>
    <string name="faq1">BawaBerkah adalah platform donasi digital terbuka untuk memudahkan Yayasan, organisasi, komunitas dan perorangan terverifikasi menggalang dana secara online dengan lebih transparan, luas dan terpercaya. Masyarakat luas berdonasi kepada beragam gerakan kebaikan terpercaya dari seluruh Indonesia secara mudah, aman dan tercatat.</string>
    <string name="faq2">BawaBerkah bagian dari Yayasan Dompet Dhuafa Republika, lembaga nirlaba yang berkhidmat memberdayakan dhuafa dan aktif dalam beragam kegiatan kemanusiaan dengan pengelolaan dana zakat, infak, sedekah dan wakaf secara professional, amanah dan transparan sejak 1993. \n\nSebagai bagian dari Yayasan Dompet Dhuafa Republika, maka BawaBerkah bernaung dalam legalitas yang dimiliki Yayasan Dompet Dhuafa Republika sebagai: \n\nLembaga Amil Zakat Nasional resmi, berdasarkan SK Menteri Agama no 239 tahun 2016. Lembaga Nazhir Wakaf Badan Hukum, berdasarkan SK Badan Wakaf Indonesia nomor 36.74.3.1.00001 tahun 2011 (Wakaf Aset) dan nomor 3.3.00100 tahun 2015 (Wakaf Uang).</string>
    <string name="faq3">BawaBerkah terbuka bagi yayasan, organisasi, komunitas dan perorangan yang telah lolos verifikasi untuk menjadi penggalang dana (Campaigner)</string>
    <string name="faq4">Selama bentuk dukungan yang diharapkan berbentuk donasi (zakat, sedekah, wakaf, kurban), maka program tersebut dapat digalang melalui BawaBerkah. Baik dalm bidang sosial, kebencanaan, kemanusiaan, dakwah, kesehatan, pendidikan, pemberdayaan ekonomi maupun sarana ibadah dan sarana publik.</string>
    <string name="faq5">BawaBerkah mengenakan sharing fee sebesar 5% atas program (campaign) yang digalang melalui BawaBerkah. Sharing fee digunakan BawaBerkah untuk menutupi biaya transaksi, pengembangan platform, sosialisasi dan operasional. Surplus operasional BawaBerkah, jika ada, akan disalurkan untuk mendukung program sosial dan pemberdayaan Dompet Dhuafa. Sharing fee dikenakan saat pencairan dana. \n\nApa maksud kategori Sedekah, Zakat dan Wakaf yang tercantum di Campaign?</string>
    <string name="faq6">Zakat: \n\nKategori Campaign yang dibuat oleh Amil Zakat dan penerima manfaatnya adalah bagian dari 8 golongan yang berhak menerima zakat (fakir, miskin, amil, muallaf, memerdekakan budak, orang yang berhutang untuk kebutuhan dasar, perjuangan di jalan Allah, dan orang dalam perjalanan). \n\nWakaf: \n\nKategori Campaign yang dibuat oleh Nazir Wakaf dan pengelolaan dananya dilakukan dengan menahan pokoknya, untuk dialirkan manfaatnya bagi kemaslahatan umat, baik produktif secara sosial (masjid, sarana pendidikan, kuburan, dsb) maupun produktif secara komersial (ruko, rumah sewa, rumah sakit, pabrik, dsb). \n\nSedekah: \n\nKategori Campaign yang bersifat tidak mengikat, baik secara jenis Campaigner, peruntukan penerima manfaat, maupun cara pengelolaan dana. Bisa juga disebut donasi umum.</string>
</resources>