<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.KebijakanPrivacyActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_gravity="center_vertical"
            android:onClick="goBack"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
        <TextView
            android:id="@+id/txtHeader"
            android:gravity="center"
            android:text="Kebijakan Privasi"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="1."
                        android:textColor="@color/black"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:text="Pengumpulan Informasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="30dp">

                    <TextView
                        android:text="@string/kebijakan1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingRight="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="2."
                        android:textColor="@color/black"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:text="Penggunaan Informasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="30dp">

                    <TextView
                        android:text="@string/kebijakan2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <TextView
                        android:text="@string/kebijakan21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <TextView
                        android:text="@string/kebijakan22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <TextView
                        android:text="@string/kebijakan23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <TextView
                        android:text="@string/kebijakan24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <TextView
                        android:text="@string/kebijakan25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <TextView
                        android:text="@string/kebijakan26"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingRight="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="3."
                        android:textColor="@color/black"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:text="Privasi E-Dagang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="30dp">

                    <TextView
                        android:text="@string/kebijakan3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>